// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Actions::Recommendations should handle fetching data - getting an error 1`] = `
Array [
  Object {
    "loading": true,
    "type": "RECOMMENDATIONS_LOADING",
  },
]
`;

exports[`Actions::Recommendations should handle fetching data - send correct actions 1`] = `
Array [
  Object {
    "loading": true,
    "type": "RECOMMENDATIONS_LOADING",
  },
  Object {
    "loading": false,
    "type": "RECOMMENDATIONS_LOADING",
  },
]
`;
